# stb-parser

./: Cargo.toml
data/: steel_standard_model.stb
src/: geometry.rs  lib.rs  st_bridge.rs  stb_common.rs
src/st_bridge/: mod.rs  stb_common.rs  stb_extensions.rs
src/st_bridge/stb_model/: mod.rs  stb_axes_and_stories.rs  stb_members.rs  stb_nodes.rs  stb_sections.rs
src/stb_model/: mod.rs  stb_axes_and_stories.rs  stb_members.rs  stb_model.rs  stb_nodes.rs
tests/: test.rs
