[package]
name = "stb-parser"
version = "0.1.0-snapshot"
edition = "2021"
authors = ["Kota Tsuboi k17trpsynth@gmail.com"]
description = "A parser for ST-Bridge which is a file format of building information model of architecture structure in Japan."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
strum = "0.24.0"
strum_macros = "0.24.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
